# ofml-interpreter

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_PRICING_INVESTIGATION.md  Cargo.toml  FRAMERY_CORRUPTION_INVESTIGATION_REPORT.md  FRAMERY_DATA_EXAMPLES.md  FRAMERY_INVESTIGATION_REPORT.md  FRAMERY_PRICE_CORRUPTION_SUMMARY.md  FRAMERY_PRICING_INVESTIGATION_REPORT.md  FRAMERY_PRICING_SUMMARY.md  FRAMERY_VS_FAST_COMPARISON.md  MANUFACTURER_PRICING_QUICK_REFERENCE.md  MULTI_MANUFACTURER_PRICING_PATTERNS_REPORT.md  MULTI_MFR_PRICING_REPORT.txt  PRICING_IMPLEMENTATION_RECOMMENDATIONS.md  PRICING_PATTERNS_COMPARISON_TABLE.txt  README.md  analyze_framery.py  analyze_framery_pricing.py  compare_framery_fast.py  comprehensive_pricing_investigation.py  investigate_framery_price.rs  multi_mfr_pricing_analysis.rs  pricing_investigation_output.txt  pricing_investigation_results.json  research.md  tarpaulin-report.json
crates/ofml-cli/: Cargo.toml
crates/ofml-cli/src/: main.rs
crates/ofml-lib/: Cargo.toml
crates/ofml-lib/benches/: ebase_expr_bench.rs  family_loading_bench.rs  geometry_bench.rs
crates/ofml-lib/src/: alb_loader.rs  article.rs  ast.rs  attachment.rs  ebase.rs  ebase_expr.rs  env.rs  geometry.rs  geometry2d.rs  gobject.rs  interpreter.rs  lexer.rs  lib.rs  material.rs  ofml.rs  ofml_classes.rs  operations.rs  parser.rs  property.rs  scene.rs  texture.rs  value.rs  xoi_framework.rs
crates/ofml-lib/src/oap/: actions.rs  article_price.rs  catalog.rs  config.rs  currency.rs  discount.rs  engine.rs  families.rs  manufacturers.rs  mod.rs  oam.rs  ocd.rs  ocd_properties.rs  ocd_relation.rs  price.rs  property.rs  tax.rs  variant.rs
crates/ofml-lib/tests/: article_tests.rs  broad_ebase_validation.rs  check_sedus_relations.rs  cls_processing_tests.rs  e2e_tests.rs  ebase_debug_test.rs  ebase_expr_tests.rs  ebase_offset_debug.rs  ebase_validation_test.rs  find_corrupt_records.rs  framery_binary_analysis.rs  framery_four_investigation.rs  framery_price_investigation.rs  framery_recovery_test.rs  framery_relation_test.rs  frmr_one_e2e_test.rs  geometry2d_tests.rs  geometry_tests.rs  material_tests.rs  multi_manufacturer_price_test.rs  multi_manufacturer_tests.rs  ofmldata_integration_tests.rs  price_validation_test.rs  relation_investigation.rs  texture_tests.rs  trace_corruption.rs  trace_record26.rs  unit.rs  vitra_classic_test.rs
crates/ofml-lib/tests/fixtures/bordbar/basic/: bordbar_basic_1.alb
crates/ofml-lib/tests/fixtures/cassina/abc/: abc.ebase
crates/ofml-lib/tests/integration/: cli_configure_test.rs
crates/ofml-lib/tests/unit/: oap_actions_test.rs  oap_export_test.rs  oap_price_test.rs  oap_variant_test.rs  ocd_features_test.rs  ocd_snapshot_test.rs  propvalue2varcond_test.rs  table_relation_test.rs  test_descriptions.rs  tui_data_validation_test.rs  tui_form_test.rs  tui_resize_test.rs  tui_search_test.rs  tui_snapshot_test.rs  tui_state_test.rs  vitra_snapshot_test.rs
crates/ofml-lib/tests/unit/snapshots/: unit__unit__ocd_snapshot_test__sedus_ai_article_prop_classes.snap  unit__unit__ocd_snapshot_test__sedus_ai_articles.snap  unit__unit__ocd_snapshot_test__sedus_ai_base_prices.snap  unit__unit__ocd_snapshot_test__sedus_ai_ocd_stats.snap  unit__unit__ocd_snapshot_test__sedus_ai_surcharges.snap  unit__unit__tui_snapshot_test__snapshot_tests__family_config_with_price.snap  unit__unit__tui_snapshot_test__snapshot_tests__family_config_with_surcharges.snap  unit__unit__tui_snapshot_test__snapshot_tests__family_list.snap  unit__unit__tui_snapshot_test__snapshot_tests__help_screen.snap  unit__unit__tui_snapshot_test__snapshot_tests__manufacturer_list.snap  unit__unit__tui_snapshot_test__snapshot_tests__manufacturer_list_selected.snap  unit__unit__vitra_snapshot_test__vitra_classic_c_family.snap  unit__unit__vitra_snapshot_test__vitra_classic_data_quality.snap  unit__unit__vitra_snapshot_test__vitra_classic_families.snap
crates/ofml-tui/: Cargo.toml
crates/ofml-tui/src/: app.rs  config_store.rs  lib.rs  main.rs  runner.rs  theme.rs  ui.rs
crates/ofml-tui/src/views/: articles.rs  catalog.rs  families.rs  family_config.rs  help.rs  manufacturers.rs  mod.rs  properties.rs  tables.rs
crates/ofml-tui/src/widgets/: form.rs  list.rs  mod.rs
(+181 files in other folders)
