[workspace]
resolver = "2"
members = [
    "crates/ofml-lib",
    "crates/ofml-tui",
    "crates/ofml-cli",
]

# Shared dev-dependencies
[workspace.dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.40", features = ["json"] }

# Release profile optimizations
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Maximum optimization profile
[profile.release-max]
inherits = "release"
lto = "fat"
opt-level = 3
