[package]
name = "ofml-lib"
version = "0.1.0"
edition = "2021"
description = "OFML/CLS interpreter library for Office Furniture Modeling Language"
license = "MIT"

[dependencies]
thiserror = "1.0"
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1"
byteorder = "1.5"
gltf = "1.4"
base64 = "0.22"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tga", "bmp"] }
svg = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
encoding_rs = "0.8"
tracing = "0.1"
rayon = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.40", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ebase_expr_bench"
harness = false

[[bench]]
name = "geometry_bench"
harness = false

[[bench]]
name = "family_loading_bench"
harness = false
