[package]
name = "ofml-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for OFML product configuration"
license = "MIT"

[[bin]]
name = "ofml-tui"
path = "src/main.rs"

[dependencies]
ofml-lib = { path = "../ofml-lib" }
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.40", features = ["json"] }
